--- a/src/componentes/naipe/styles.module.css
+++ b/src/componentes/naipe/styles.module.css
@@ -1,19 +1,17 @@
 .cartas_tab {
-    width: 20vw;
-    height: 32vh;
-    margin: auto;
-    padding: auto;
-    display: grid;
-    grid-template-columns: 24% 24% 24% 24%;
-    grid-template-rows: 33.3% 33.3% 33.3% ;
-    justify-content: center;
+    
+    display: flex;
     perspective: 1000px;
+    margin: 1px;
+
+
+    /* width: 20vw;
+    height: 32vh;
+    */
     border-color: #ff9b2a;
+    background-color: aquamarine;
+    align-self: center;
   
-    align-content: center;
-    justify-items: center;
-    align-items: center;
-    text-align: center;
   
   }
 
@@ -33,7 +31,7 @@
 
 .naipe {
     padding: auto;
-    margin: auto;
+    margin: 10px;
     background-color: blue;
     width: 20vw;
     height: 43vh;
