--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,28 @@ a {
   text-decoration: none;
 }
 
+.game {
+  position: relative;
+  z-index: 1;
+}
+
+.modal {
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+.backdrop {
+  width: 100%;
+}
+
+.hidden {
+  z-index: 0;
+}
+
+
 * {
   box-sizing: border-box;
 }
