--- a/src/componentes/mesa/styles.module.css
+++ b/src/componentes/mesa/styles.module.css
@@ -10,8 +10,7 @@
      justify-content: space-around;
 
       
-     background-color: rgb(236, 241, 182);
-    }
+}
 
 .barra_branca {
     padding-bottom: 5vh;
@@ -19,10 +18,12 @@
 }
 
 .mesa {
-    background-color: rgb(211, 129, 6);
+    /* background-color: rgb(211, 129, 6); */
     display: flex;
     flex-direction: column;
     margin : 3px;
     width: 100%;
     height: 100%;
+
+    
 }
