--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,15 +1,66 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+
+html,body {
+  background: #0c9780;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  line-height: 1;
+  position: relative;
+}
+
+body::before {
+  background: repeating-linear-gradient(
+    transparent,
+    transparent 2em,
+    rgba(45,25,25,0.3) 2em,
+    rgba(45,25,25,0.3) 2.5em,
+    transparent 2.5em,
+    transparent 4.5em,
+    rgba(45,25,25,0.3) 4.5em,
+    rgba(45,25,25,0.3) 6.5em,
+    transparent 6.5em,
+    transparent 7em,
+    rgba(45,25,25,0.3) 7em,
+    rgba(45,25,25,0.3) 9em
+  );
+  content: '';
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+}
+
+body::after {
+  background: repeating-linear-gradient( 90deg,
+    transparent,
+    transparent 2em,
+    rgba(45,25,25,0.3) 2em,
+    rgba(45,25,25,0.3) 2.5em,
+    transparent 2.5em,
+    transparent 4.5em,
+    rgba(45,25,25,0.3) 4.5em,
+    rgba(45,25,25,0.3) 6.5em,
+    transparent 6.5em,
+    transparent 7em,
+    rgba(45,25,25,0.3) 7em,
+    rgba(45,25,25,0.3) 9em
+  );
+  content: '';
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+
 
 .game {
   position: relative;
