--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@ html,body {
   align-items: center;
   line-height: 1;
   position: relative;
+  z-index: -10;
 }
 
 body::before {
@@ -31,6 +32,7 @@ body::before {
   left: 0;
   right: 0;
   position: absolute;
+  z-index: -10;
 }
 
 body::after {
@@ -54,6 +56,7 @@ body::after {
   left: 0;
   right: 0;
   position: absolute;
+  z-index: -10;
 }
 
 a {
